# parvis-mk10

./: .gitignore  HANDOFF.md  README.md
backend/: .env.example  launcher.py  main.py  nixpacks.toml  parvis-backend.spec  pyproject.toml  railway.json  requirements.txt
backend/api/v1/: architecture.py  audit.py  document_analysis.py  documents.py  gladue.py  health.py  inference.py  intake_chat.py  quantum.py  record_analysis.py  sce.py
backend/core/: settings.py
backend/parvis_engine/: __init__.py  _audit_report.py  _document_io.py  _gladue_factors.py  _intake_protocol.py  _record_analysis.py  _sce_factors.py  _stub.py  audit_export.py  bloch_sphere.py  canlii_client.py  counterfactual_audit.py  doctrine.py  document_analyzer.py  model.py  quantum_diagnostics.py  stare_decisis.py
docs/: N20_methodology.md
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/audit/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/documents/: page.tsx
frontend/app/gladue/: page.tsx
frontend/app/inference/: page.tsx
frontend/app/network/: page.tsx
frontend/app/overview/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/quantum/: page.tsx
frontend/app/record/: page.tsx
frontend/components/: Crest.tsx  Glyph.tsx  LivePosteriorRail.tsx  NodeCard.tsx  NodeTag.tsx  PosteriorBadge.tsx  Providers.tsx  Shell.tsx  Sidebar.tsx  TopBar.tsx
frontend/lib/: api.ts  nodes.ts  sessionId.ts  tokens.ts
frontend/src-tauri/: tauri.conf.json
(+26 files in other folders)
