[project]
name = "parvis-mk9-backend"
version = "0.1.0"
description = "PARVIS Mark 9 backend — FastAPI exposure of the Mark 8 Bayesian engine."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
    # Engine dependencies — same as Mark 8
    "pgmpy>=0.1.26",
    "numpy>=1.26",
    "scipy>=1.13",
    "matplotlib>=3.9",
    # Auth (Phase A.5) — uncomment when wiring Supabase
    # "pyjwt[crypto]>=2.9",
    # "supabase>=2.10",
    "python-docx>=1.2.0",
    "reportlab>=4.5.1",
    "anthropic>=0.102.0",
    "pypdf>=6.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "core", "parvis_engine"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]   # long lines are fine; we wrap when it helps reading

[tool.pytest.ini_options]
asyncio_mode = "auto"
